# minispdlog

./: CMakeLists.txt  README.md
include/minispdlog/: async.h  async_logger.h  common.h  formatter.h  level.h  logger.h  minispdlog.h  pattern_formatter.h  registry.h
include/minispdlog/details/: async_msg.h  circular_q.h  log_msg.h  mpmc_blocking_q.h  thread_pool.h  utils.h
include/minispdlog/sinks/: base_sink.h  color_console_sink.h  console_sink.h  file_sink.h  rotating_file_sink.h
src/: CMakeLists.txt  async_logger.cpp  formatter.cpp  level.cpp  logger.cpp  pattern_formatter.cpp  registry.cpp
src/details/: thread_pool.cpp  utils.cpp
src/sinks/: rotating_file_sink.cpp
tests/: CMakeLists.txt  benchmark_spdlog.cpp  test_async_logger.cpp  test_formatter.cpp  test_level.cpp  test_logger.cpp  test_performance.cpp  test_performance.cpp.bak  test_registry.cpp  test_rotating_file.cpp  test_sink.cpp  test_thread_pool.cpp
